--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 </head>
 
 <body>
-    <nav>
-        <ul>
-            <li><a href="https://www.recetasderechupete.com/todas/recetas/postres-dulces/" target="_blank">Recetas
-                    Dulces</a></li>
-            <li><a href="https://es.tastemade.com/recetas/Recetas-Saladas" target="_blank">Recetas Saladas</a></li>
-            <li> <a href="contacto.html" target="_blank">Contacto</a> </li>
-        </ul>
-        <img src="img/lemon-pie.png" alt="lemon pie">
-    </nav>
     <header>
+        <nav>
+            <ul>
+                <li><a href="https://www.recetasderechupete.com/todas/recetas/postres-dulces/" target="_blank">Recetas
+                        Dulces</a></li>
+                <li><a href="https://es.tastemade.com/recetas/Recetas-Saladas" target="_blank">Recetas Saladas</a></li>
+                <li> <a href="contacto.html" target="_blank">Contacto</a> </li>
+            </ul>
+            <img src="img/lemon-pie.png" alt="lemon pie">
+        </nav>
         <h1 aling="center">El clásico lemon pie</h1>
         <p> Es el preferido de los que les gusta lo dulce pero no lo empalagoso.<strong>El lemon pie es una
                 tarta</strong>, es decir,
@@ -48,6 +48,7 @@
                 <li>240g. de azúcar</li>
                 <li>3 claras</li>
             </ul>
+            </section>
             <section>
                 <h2>Instrucciones</h2>
                 <ol>
@@ -68,12 +69,11 @@
                         picos, añadir gota a gota el almíbar caliente sin dejar de batir hasta que se enfríe.</li>
                     <li>Decorar con el merengue y gratinar</li>
                 </ol>
-            </section>
         </section>
     </main>
 </body>
 <footer align="center" style="background-color:gainsboro;">
-    Todos los derechos reservados a Abril Santiso ©
+   <p> Todos los derechos reservados a Abril Santiso ©</p>
 </footer>
 
 </html>
