[FIXX] Agrego  los styles de la clase 6

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8 ">
     <meta name=description content="mi web">
     <title> Mi nuevo DOC</title>
+    <link rel="stylesheet" href="css/styles.css" />
 </head>
 
 <body>
@@ -77,3 +78,4 @@
 </footer>
 
 </html>
+
